assets/styles/main.scss
---
---

@import "reset";

:root {
	// spacing
	--space-3xs: clamp(0.25rem, 0.2283rem + 0.1087vw, 0.3125rem);
	--space-2xs: clamp(0.5rem, 0.4783rem + 0.1087vw, 0.5625rem);
	--space-xs: clamp(0.75rem, 0.7065rem + 0.2174vw, 0.875rem);
	--space-s: clamp(1rem, 0.9565rem + 0.2174vw, 1.125rem);
	--space-m: clamp(1.5rem, 1.4348rem + 0.3261vw, 1.6875rem);
	--space-l: clamp(2rem, 1.913rem + 0.4348vw, 2.25rem);
	--space-xl: clamp(3rem, 2.8696rem + 0.6522vw, 3.375rem);
	--space-2xl: clamp(4rem, 3.8261rem + 0.8696vw, 4.5rem);
	--space-3xl: clamp(6rem, 5.7391rem + 1.3043vw, 6.75rem);

	// typography
	--font--2: clamp(0.79rem, 0.7557rem + 0.1717vw, 0.8888rem);
	--font--1: clamp(0.8888rem, 0.8501rem + 0.1935vw, 1rem);
	--font-0: clamp(1rem, 0.9565rem + 0.2174vw, 1.125rem);
	--font-1: clamp(1.125rem, 1.0761rem + 0.2446vw, 1.2656rem);
	--font-2: clamp(1.2656rem, 1.2106rem + 0.275vw, 1.4238rem);
	--font-3: clamp(1.4238rem, 1.3618rem + 0.3098vw, 1.6019rem);
	--font-4: clamp(1.6019rem, 1.5323rem + 0.3478vw, 1.8019rem);
	--font-5: clamp(1.8019rem, 1.7234rem + 0.3924vw, 2.0275rem);

	// colour
	--accent: #0e3a53;
	--font-colour: #0e3a53;
	--off-white: #f5f5f4;
	--off-blue: #e0e1e8;

	// Fonts
	--font-body: "Noto Sans Mono", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
	--font-headings: "Noto Sans Mono", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
		monospace;
	--font-code: "Noto Sans Mono", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
}

body {
	background-color: var(--off-blue);
	display: flex;
	flex-direction: column;
	text-rendering: optimizeSpeed;
	font-family: var(--font-body);
	color: var(--font-colour);
}

main {
	flex: auto;
}

h1,
h2,
h3,
h4 {
	font-family: var(--font-headings);
}

h1 {
	font-size: var(--font-5);
	max-width: 30ch;
}

h2 {
	font-size: var(--font-3);
	max-width: 40ch;
}

h3 {
	font-size: var(--font-2);
}

h4 {
	font-size: var(--font-1);
	font-weight: 700;
}

p,
li {
	font-size: var(--font-0);
	max-width: 65ch;
	line-height: 1.6;
}

a {
	color: var(--font-colour);
	text-decoration-color: var(--accent);
	font-weight: bold;

	&:hover {
		text-underline-offset: 4px;
	}
}

a,
button {
	&:focus {
		outline-color: var(--font-colour);
	}
}

blockquote {
	padding-left: var(--space-s);
	margin-bottom: var(--space-m);
	max-width: 65ch;
	border-left: 4px solid var(--accent);
}

ul {
	list-style-type: square;
}

.wrapper {
	width: 90vw;
	width: clamp(16rem, 93vw, 75rem);
	margin-left: auto;
	margin-right: auto;
	position: relative;
}

.region {
	padding-top: var(--space-m);
	padding-bottom: var(--space-m);
	max-width: 50rem;
}

.stack {
	--space: var(--space-s);
	display: flex;
	flex-direction: column;
	justify-content: flex-start;

	h1 + * {
		--space: var(--space-m);
		margin-block-start: var(--space);
	}

	> * {
		margin-block: 0;
	}

	> * + * {
		margin-block-start: var(--space);
	}

	&--l {
		--space: var(--space-l);
		display: flex;
		flex-direction: column;
		justify-content: flex-start;

		> * {
			margin-block: 0;
		}

		> * + * {
			margin-block-start: var(--space);
		}
	}

	&--xs {
		--space: var(--space-xs);
	}
}

.cluster {
	display: flex;
	flex-wrap: wrap;
	gap: var(--space, 1rem);
	justify-content: flex-start;
	align-items: center;
}

.post {
	&__title {
		line-height: normal;
	}

	&__about-the-author {
		border-top: 2px solid var(--accent);
		padding: var(--space-m) 0;
		display: flex;
		gap: var(--space-m);

		img {
			width: 30%;
			height: 30%;
		}

		h3 {
			font-size: var(--font-2);
		}
	}

	&__meta-container {
		max-width: 70ch;
	}

	&__meta {
		display: grid;
		grid-template-columns: 1fr 2fr;
		font-size: var(--font-0);
		margin-left: auto;
		margin-bottom: var(--space-m);
		align-items: center;
		grid-column-gap: 1rem;

		border: 2px solid var(--accent);
		font-weight: 700;

		dt {
			padding: 2px 4px;
		}

		dd {
			margin: 0;
			padding: 8px;
			text-transform: uppercase;
			letter-spacing: 1px;
			background-color: var(--accent);
			color: var(--off-white);

			&::selection {
				background-color: var(--accent);
				color: var(--font-colour);
			}
		}
	}

	&__meta-category {
		text-transform: uppercase;
	}

	&__body {
		:is(h2, h3) {
			--space: var(--space-xl);
			font-weight: 700;
		}

		:is(h2, h3) + * {
			--space: var(--space-s);
		}

		:is(h4) {
			--space: var(--space-l);
		}

		:is(h4) + * {
			--space: var(--space-xs);
		}

		blockquote {
			margin-top: var(--space-m);
			margin-bottom: var(--space-s);
		}

		pre[class*="language-"] {
			margin-left: 50%;
			max-width: 60rem;
			transform: translateX(-50%);
			width: 100vw;
			overflow-x: auto;
			margin-top: var(--space-m);
			margin-bottom: var(--space-m);
			padding-top: var(--space-m);
			padding-bottom: var(--space-m);
		}

		:not(pre) > code[class*="language-"] {
			background: none !important;
			color: var(--accent);
			font-weight: 700;
			font-family: var(--font-code);
			font-size: var(--font-0);
		}

		& .footnotes {
			* {
				font-size: var(--font--0);
				max-width: 65ch;
			}

			ol {
				padding-left: 1rem;

				> * {
					margin-block: 0;
				}

				> * + * {
					margin-block-start: 0.8rem;
				}

				:not(pre) > code[class*="language-"] {
					font-size: var(--font-0);
				}
			}
		}

		sup {
			padding-left: 2px;
		}
	}
}

.accent {
	color: var(--accent);
}

.categories {
	list-style-type: none;
	padding-left: 0;
	--space: var(--space-xs);

	&__item {
		border: 2px solid var(--accent);
		text-transform: capitalize;
		font-weight: 700;

		&:hover {
			background-color: var(--accent);
			> * {
				color: var(--off-white);
			}
		}

		a {
			text-decoration: none;
			padding: var(--space-3xs) var(--space-2xs);
			display: inline-block;
		}
	}
}

.site-footer {
	border-top: 2px solid var(--accent);

	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	gap: var(--space-s);
	padding-top: var(--space-s);
	padding-bottom: var(--space-m);

	&__attributions {
		text-align: center;
		margin: 0 auto;
		p {
			font-size: var(--font--1);
			max-width: 100%;
		}
	}

	&__links {
		ul {
			display: flex;
			flex-wrap: wrap;
			justify-content: space-evenly;
			gap: var(--space-s);
			list-style-type: none;
		}
	}
}

.ramblings {
	--space: var(--space-m);

	list-style-type: none;
	padding-left: 0;

	&__item {
		display: flex;
		align-items: baseline;
		flex-wrap: wrap;
		gap: 0;
		flex-direction: column;

		@media (min-width: 700px) {
			gap: var(--space-m);
			flex-direction: row;
		}

		h2,
		h3,
		h4 {
			font-size: var(--font-2);
		}

		h2 {
			max-width: 40ch;
		}
	}
}

::selection {
	background-color: var(--font-colour);
	color: var(--off-white);
}

@import "site-head";
@import "skip-link";

.remove-padding {
	padding-top: 0;
	padding-bottom: 0;
}

